--- a/.env.cloud.yaml
+++ b/.env.cloud.yaml
@@ -1,5 +1,6 @@
-PG_PROTO: tcp
-PG_ADDR: localhost:5432
-PG_DB: bc_tracer
-PG_USER: postgres
-PG_PASSWORD: postgres
+PG_PROTO: unix
+PG_ADDR: /cloudsql/wakeup-278716:europe-west1:wakeup-postgres/.s.PGSQL.5432
+PG_DB: wakeup
+PG_USER: wakeup
+PG_PASSWORD: e8x013k60skf3l
+CALL_ROOM_ENDPOINT: https://europe-west1-wakeup-278613.cloudfunctions.net/CallRoom
